--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -35,7 +35,7 @@
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1558222218-b7b54eede3f3?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Card image" height="185px" width="185px" style="object-fit: cover;">
         <div class="card-body">
           <p class="title">Person1</p>
           <p>Person1 Title</p>
@@ -45,7 +45,7 @@
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?q=80&w=2576&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Card image" height="185px" width="185px" style="object-fit: cover;">
         <div class="card-body">
           <p class="title">Person2</p>
           <p>Person2 Title</p>
@@ -55,7 +55,7 @@
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://images.unsplash.com/photo-1573497491765-dccce02b29df?q=80&w=2574&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Card image" height="185px" width="185px" style="object-fit: cover;">
         <div class="card-body">
           <p class="title">Person3</p>
           <p>Person3 Title</p>
