--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -65,7 +65,7 @@
             
                 <div class="contact-item">
                     <p class="Dept">All Open Positions</p>
-                    <p><a href="#">Careers</a></p>
+                    <p><a href="#">Careers ↗</a></p>
                 </div>
             </div>
         </div>
